# python_de

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.cursor/rules/: git-and-streamlit-after-changes.mdc
.streamlit/: config.toml  secrets.toml.example
docs/: one_page_demo_script_he.md  presentation_personal_guide_he.md
src/retail_etl/: __init__.py  analytics.py  cli.py  constants.py  db_security.py  etl.py  exporter.py  ingest_kaggle.py  local_time.py  logging_config.py  meta.py  monitor.py  paths.py  plotting.py  presentation.py  presentation_he.py  settings.py  sql_guard.py  sql_loader.py  utils.py
src/retail_etl/sql/: analytics.sql  analytics_invoice_distribution.sql  analytics_kpis.sql  analytics_rfm_customers.sql  analytics_rfm_max_date.sql  analytics_weekday.sql  app.sql  app_dataset_overview.sql  app_staging_for_slicers.sql  etl.sql  etl_create_unique_index.sql  etl_drop_staging.sql  etl_init_staging.sql  etl_insert_incremental.sql  etl_select_max_invoice_date.sql  marts.sql  marts_country.sql  marts_customer.sql  marts_monthly.sql  marts_product.sql  meta.sql  meta_add_alert.sql  meta_clear_alerts_all.sql  meta_clear_alerts_by_kind.sql  meta_finish_run.sql  meta_get_last_success.sql  meta_get_source_state.sql  meta_init_tables.sql  meta_list_active_alerts.sql  meta_start_run.sql  meta_upsert_schema_state.sql  meta_upsert_source_state.sql
tests/: test_clean_sales.py  test_local_time.py  test_sql_guard.py  test_weekday_hour_pivot.py
