[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-etl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
retail-etl = "retail_etl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
